--- a/sam.jvm.yaml
+++ b/sam.jvm.yaml
@@ -1,6 +1,6 @@
   AWSTemplateFormatVersion: '2010-09-09'
   Transform: AWS::Serverless-2016-10-31
-  Description: AWS Serverless Quarkus HTTP - org.tjpower::lambda-sqs
+  Description: AWS Serverless Quarkus HTTP - org.tjpower
   Globals:
     Api:
       EndpointConfiguration: REGIONAL
@@ -8,7 +8,7 @@
         - "*/*"
 
   Resources:
-    LambdaSqsFunction:
+    KotlinLambdaFunction:
       Type: AWS::Serverless::Function
       Properties:
         Handler: io.quarkus.amazon.lambda.runtime.QuarkusStreamHandler::handleRequest
